Add coverage report generation

--- a/debian/control
+++ b/debian/control
@@ -1,14 +1,20 @@
 Source: wb-mqtt-serial
-Maintainer: Evgeny Boger <boger@contactless.ru>
+Maintainer: Wiren Board team <info@wirenboard.com>
 Section: misc
 Priority: optional
 Standards-Version: 3.9.2
-Build-Depends: debhelper (>= 10), pkg-config, libwbmqtt1-5-dev (>= 5.0.0~~), libwbmqtt1-5-test-utils (>= 5.0.0~~), j2cli:all, libgtest-dev
+Build-Depends: debhelper (>= 10),
+               gcovr:all,
+               j2cli:all,
+               libgtest-dev,
+               libwbmqtt1-5-dev (>= 5.0.0~~),
+               libwbmqtt1-5-test-utils (>= 5.0.0~~),
+               pkg-config
 Homepage: https://github.com/wirenboard/wb-mqtt-serial
 
 Package: wb-mqtt-serial
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ucf, bsdutils (>= 2.29), libwbmqtt1-5 (>= 5.0.0~~), wb-utils
+Depends: ${shlibs:Depends}, ${misc:Depends}, ucf, bsdutils (>= 2.29), wb-utils
 Replaces: wb-homa-modbus (<< 1.14.1)
 Recommends: wb-mqtt-confed (>= 1.7.0)
 Breaks: wb-homa-modbus (<< 1.14.1), wb-mqtt-confed (<< 1.7.0), wb-mqtt-homeui (<< 2.82.0~~)
