minor fix template

--- a/templates/config-onokom-air-tcl-1-mb-b.json
+++ b/templates/config-onokom-air-tcl-1-mb-b.json
@@ -1112,7 +1112,7 @@
                 "Error 21": "Неизвестная ошибка 2",
                 "Error 22": "Неизвестная ошибка 3",
                 "Error 23": "Неизвестная ошибка 4",
-                "Error 24": "Неизвестная ошибка 5",
+                "Error 24": "Неизвестная ошибка 5"
             }
         }
     }
