deprecate old(without buttons) template

--- a/templates/config-wb-mir_v2.json
+++ b/templates/config-wb-mir_v2.json
@@ -2,6 +2,7 @@
     "title": "WB-MIR-v2_template_title",
     "device_type": "WB-MIR v2",
     "group": "g-wb",
+    "deprecated": true,
     "hw": [
         {
             "signature": "WBMIR3"
