Add min_request_interval to WBE2-I-EBUS template
Boiler's controller is not designed for fast polling. Limit requests to it by setting min_request_interval=1000

--- a/templates/config-wbe2-i-ebus.json
+++ b/templates/config-wbe2-i-ebus.json
@@ -5,6 +5,7 @@
     "device": {
         "name": "WBE2-I-EBUS",
         "id": "wbe2-i-ebus",
+        "min_request_interval": 1000,
 
         "groups": [
             {
