--- a/templates/config-wbe2-i-opentherm-fw1.7.3.json
+++ b/templates/config-wbe2-i-opentherm-fw1.7.3.json
@@ -269,7 +269,8 @@
                 "name": "Hot Water Setpoint",
                 "address": 204,
                 "reg_type": "holding",
-                "type": "temperature",
+                "type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "min": 0,
                 "max": 80,
