--- a/templates/config-wbe2-i-opentherm-fw1.7.3.json
+++ b/templates/config-wbe2-i-opentherm-fw1.7.3.json
@@ -331,7 +331,8 @@
                 "name": "Water Pressure",
                 "address": 210,
                 "reg_type": "input",
-                "type": "pressure",
+                "type": "value",
+                "units": "bar",
                 "format": "u16",
                 "scale": 0.1,
                 "offset": -100,
