fix deprecated type in config-wbe2-i-opentherm-fw1.7.3.json

--- a/templates/config-wbe2-i-opentherm-fw1.7.3.json
+++ b/templates/config-wbe2-i-opentherm-fw1.7.3.json
@@ -289,7 +289,8 @@
                 "name": "Solar Storage temp",
                 "address": 220,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state"
             },
@@ -297,7 +298,8 @@
                 "name": "CH2 Temperature",
                 "address": 222,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state"
             },
@@ -305,7 +307,8 @@
                 "name": "Heating Temperature",
                 "address": 207,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state"
             },
@@ -313,7 +316,8 @@
                 "name": "Heating Return Water Temperature",
                 "address": 216,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state",
                 "enabled": false
@@ -343,7 +347,8 @@
                 "name": "Boiler Outdoor Temperature Sensor",
                 "address": 211,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "s16",
                 "scale": 0.1,
                 "offset": -100,
@@ -355,7 +360,8 @@
                 "name": "Hot Water Setpoint Max",
                 "address": 212,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state",
                 "enabled": false
@@ -364,7 +370,8 @@
                 "name": "Hot Water Setpoint Min",
                 "address": 213,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state",
                 "enabled": false
@@ -373,7 +380,8 @@
                 "name": "Heating Setpoint Max",
                 "address": 214,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state",
                 "enabled": false
@@ -382,7 +390,8 @@
                 "name": "Heating Setpoint Min",
                 "address": 215,
                 "reg_type": "input",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "group": "boiler_state",
                 "enabled": false
@@ -479,7 +488,8 @@
                 "name": "Calculated Heating Setpoint",
                 "address": 203,
                 "reg_type": "holding",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "min": 0,
                 "max": 80,
@@ -491,7 +501,8 @@
                 "name": "Room Temperature",
                 "address": 208,
                 "reg_type": "holding",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "s16",
                 "scale": 0.1,
                 "offset": -100,
@@ -504,7 +515,8 @@
                 "name": "Outdoor Temperature",
                 "address": 208,
                 "reg_type": "holding",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "s16",
                 "scale": 0.1,
                 "offset": -100,
@@ -517,7 +529,8 @@
                 "name": "Room Temperature Setpoint",
                 "address": 205,
                 "reg_type": "holding",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "min": 0,
                 "max": 35,
@@ -536,7 +549,8 @@
                 "name": "Heating Setpoint",
                 "write_address": 203,
                 "reg_type": "holding",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "min": 0,
                 "max": 80,
@@ -547,7 +561,8 @@
                 "name": "Heating Setpoint",
                 "address": 203,
                 "reg_type": "holding",
-                "type": "temperature",
+		"type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "min": 0,
                 "max": 80,
