--- a/templates/config-bht-006-series.json
+++ b/templates/config-bht-006-series.json
@@ -10,7 +10,9 @@
                 "reg_type": "holding",
                 "address": "0x00",
                 "type": "switch",
-                "format": "s16"
+                "format": "s16",
+                "on_value": 1,
+                "off_value": 0
             },
             {
                 "name": "temperature_from_internal_sensor",
@@ -26,7 +28,9 @@
                 "reg_type": "holding",
                 "address": "0x02",
                 "type": "switch",
-                "format": "s16"
+                "format": "s16",
+                "on_value": 1,
+                "off_value": 0
             },
             {
                 "name": "heating_status",
@@ -34,7 +38,9 @@
                 "address": "0x03",
                 "type": "switch",
                 "format": "s16",
-                "readonly": true
+                "readonly": true,
+                "on_value": 1,
+                "off_value": 0
             },
             {
                 "name": "setting_temperature",
@@ -61,7 +67,9 @@
                 "reg_type": "holding",
                 "address": "0x06",
                 "type": "switch",
-                "format": "s16"
+                "format": "s16",
+                "on_value": 1,
+                "off_value": 0
             }
         ],
         "translations": {
