--- a/templates/config-bht-6000-series.json
+++ b/templates/config-bht-6000-series.json
@@ -1,69 +1,88 @@
 {
- "device_type": "BHT-6000 Series",
- "group": "g-thermostat",
- "device": {
-  "name": "BHT-6000 Series",
-  "id": "bht-6000-series", 
-  "channels": [
-   {
-    "name": "Power",
-    "reg_type": "holding",
-    "address": "0x00",
-    "type": "switch",
-    "format": "s16"
-   },
-   {
-    "name": "Lock buttons",
-    "reg_type": "holding",
-    "address": "0x06",
-    "type": "switch",
-    "format": "s16"
-   },
-   {
-    "name": "Temperature from internal sensor",
-    "reg_type": "holding",
-    "address": "0x01",
-    "type": "temperature",
-    "format": "s16",
-    "scale": 0.1,
-    "readonly": true
-   },
-   {
-    "name": "Weekly program setting temperature",
-    "reg_type": "holding",
-    "address": "0x05",
-    "type": "temperature",
-    "format": "s16",
-    "type": "range",
-    "scale": 0.1,
-    "min": 5,
-    "max": 35
-   },
-   {
-    "name": "Heating status",
-    "reg_type": "holding",
-    "address": "0x03",
-    "type": "switch",
-    "format": "s16",
-    "readonly": true
-   },
-   {
-    "name": "Manual mode",
-    "reg_type": "holding",
-    "address": "0x02",
-    "type": "switch",
-    "format": "s16"
-   },
-   {
-    "name": "Setting temperature", 
-    "reg_type": "holding",
-    "address": "0x04",
-    "type": "range",
-    "format": "s16",
-    "scale": 0.1,
-    "min": 5,
-    "max": 35
-   }
-  ]
- }
+    "device_type": "BHT-6000 Series",
+    "group": "g-thermostat",
+    "device": {
+        "name": "BHT-6000 Series",
+        "id": "bht-6000-series",
+        "channels": [
+            {
+                "name": "Power",
+                "reg_type": "holding",
+                "address": "0x00",
+                "type": "switch",
+                "format": "s16",
+                "on_value": 1,
+                "off_value": 0
+            },
+            {
+                "name": "Temperature from internal sensor",
+                "reg_type": "holding",
+                "address": "0x01",
+                "type": "temperature",
+                "format": "s16",
+                "scale": 0.1,
+                "readonly": true
+            },
+            {
+                "name": "Manual mode",
+                "reg_type": "holding",
+                "address": "0x02",
+                "type": "switch",
+                "format": "s16",
+                "on_value": 1,
+                "off_value": 0
+            },
+            {
+                "name": "Heating status",
+                "reg_type": "holding",
+                "address": "0x03",
+                "type": "switch",
+                "format": "s16",
+                "readonly": true,
+                "on_value": 1,
+                "off_value": 0
+            },
+            {
+                "name": "Setting temperature",
+                "reg_type": "holding",
+                "address": "0x04",
+                "type": "range",
+                "format": "s16",
+                "scale": 0.1,
+                "min": 5,
+                "max": 35
+            },
+            {
+                "name": "Weekly program setting temperature",
+                "reg_type": "holding",
+                "address": "0x05",
+                "format": "s16",
+                "type": "range",
+                "scale": 0.1,
+                "min": 5,
+                "max": 35
+            },
+            {
+                "name": "Lock buttons",
+                "reg_type": "holding",
+                "address": "0x06",
+                "type": "switch",
+                "format": "s16",
+                "on_value": 1,
+                "off_value": 0
+            }
+        ],
+        "translations": {
+            "ru": {
+                "BHT-6000 Series": "Термостат BHT-6000 Series",
+                "Power": "Включение",
+                "Temperature from internal sensor": "Температура внутреннего датчика",
+                "Manual mode": "Ручной режим",
+                "Heating status": "Статус нагрева",
+                "Setting temperature": "Настройка температуры",
+                "Weekly program setting temperature": "Установка температуры для недельной программы",
+                "Lock buttons": "Блокировка кнопок"
+            }
+        }
+    }
 }
