--- a/templates/config-bht-006-series.json
+++ b/templates/config-bht-006-series.json
@@ -82,7 +82,7 @@
                 "manual_mode": "Manual Mode",
                 "heating_status": "Heating Status",
                 "setting_temperature": "Setting Temperature",
-                "weekly_program_setting_temperature": "Weekly program setting temperature",
+                "weekly_program_setting_temperature": "Weekly Program Setting Temperature",
                 "lock_buttons": "Lock Buttons"
             },
             "ru": {
