--- a/templates/config-xy-md0x.json
+++ b/templates/config-xy-md0x.json
@@ -1,5 +1,5 @@
 {
-    "title": "xy-md0x_title",
+    "title": "XY-MD0X (XY-MD03, XY-MD04)",
     "device_type": "XY-MD0X",
     "group": "g-climate-sensor",
     "device": {
@@ -7,19 +7,21 @@
         "id": "xy-md0x",
         "response_timeout_ms": 200,
         "guard_interval_us": 50000,
-        "parameters": {
-            "Device_ID": {
-                "title": "Device ID",
+        "parameters": [
+            {
+                "id": "device_id",
+                "title": "device_id_title",
                 "reg_type": "holding",
-                "description": "warning",
+                "description": "baud_rate_description",
                 "address": "0x101",
                 "min": 1,
                 "max": 247,
                 "default": 1,
                 "order": 1
             },
-            "Device_baud_rate": {
-                "title": "Device baud rate",
+            {
+                "id": "baud_rate",
+                "title": "baud_rate_title",
                 "reg_type": "holding",
                 "address": "0x102",
                 "enum": [
@@ -39,8 +41,9 @@
                 "default": 9600,
                 "order": 2
             },
-            "Temp_correction": {
-                "title": "Temperature correction",
+            {
+                "id": "temp_correction",
+                "title": "temp_correction_title",
                 "reg_type": "holding",
                 "address": "0x103",
                 "min": -10,
@@ -49,8 +52,9 @@
                 "default": 0,
                 "order": 3
             },
-            "Hum_correction": {
-                "title": "Humidity correction",
+            {
+                "id": "humidity_correction",
+                "title": "humidity_correction_title",
                 "reg_type": "holding",
                 "address": "0x104",
                 "min": -10,
@@ -59,13 +63,14 @@
                 "default": 0,
                 "order": 4
             }
-        },
+        ],
         "channels": [
             {
                 "name": "temperature",
                 "reg_type": "input",
                 "address": 1,
-                "type": "temperature",
+                "type": "value",
+                "units": "deg C",
                 "format": "u16",
                 "scale": 0.1
             },
@@ -75,26 +80,28 @@
                 "address": 2,
                 "type": "value",
                 "format": "u16",
-                "units": "%",
+                "units": "%, RH",
                 "scale": 0.1
             }
         ],
         "translations": {
             "en": {
-                "xy-md0x_title": "XY-MD0X (XY-MD03, XY-MD04)",
+                "device_id_title": "Device ID",
+                "baud_rate_title": "Device Baud Rate",
+                "temp_correction_title": "Temperature Correction",
+                "humidity_correction_title": "Humidity Correction",
                 "temperature": "Temperature",
                 "humidity": "Humidity",
-                "warning": "Before changing the parameters, make sure that the connection to the device is established. You will need to restart your device to apply the new settings."
+                "baud_rate_description": "Make sure that communication with device is established before changing communication parameter. Select required device ID and(or) baud rate, save configuration and then change port baud rate to the same value. You will need to restart your device to apply the new settings."
             },
             "ru": {
-                "xy-md0x_title": "XY-MD0X (XY-MD03, XY-MD04)",
-                "warning": "Перед изменением параметров убедитесь, что связь с устройством установлена. Для применения новых настроек потребуется выполнить перезагрузку устройства.",
+                "device_id_title": "Modbus Slave ID датчика",
+                "baud_rate_title": "Скорость обмена",
+                "temp_correction_title": "Коррекция температуры",
+                "humidity_correction_title": "Коррекция влажности",
+                "baud_rate_description": "Перед изменением параметров убедитесь, что связь с устройством установлена. Для применения новых настроек потребуется выполнить перезагрузку устройства.",
                 "temperature": "Температура",
                 "humidity": "Влажность",
-                "Temperature correction": "Коррекция температуры",
-                "Humidity correction": "Коррекция влажности",
-                "Device ID": "Modbus SlaveID датчика",
-                "Device baud rate": "Скорость обмена"
             }
         } 
     }
