--- a/templates/config-xy-md0x.json
+++ b/templates/config-xy-md0x.json
@@ -101,7 +101,7 @@
                 "humidity_correction_title": "Коррекция влажности",
                 "baud_rate_description": "Перед изменением параметров убедитесь, что связь с устройством установлена. Для применения новых настроек потребуется выполнить перезагрузку устройства.",
                 "temperature": "Температура",
-                "humidity": "Влажность",
+                "humidity": "Влажность"
             }
         } 
     }
