--- a/templates/config-meanwell-drs.json
+++ b/templates/config-meanwell-drs.json
@@ -6,17 +6,198 @@
         "name": "MEANWELL DRS Series",
         "id": "meanwell-drs",
         "groups": [
+            {
+                "title": "Power Status",
+                "id": "power_status"
+            },
+            {
+                "title": "Unit Status",
+                "id": "unit_status"
+            },
+            {
+                "title": "Settings",
+                "id": "settings"
+            },
+            {
+                "title": "HW Info",
+                "id": "hw_info"
+            }
         ],
         "parameters": {
         },
         "channels": [
+            {
+                "name": "voltage_ac",
+                "reg_type": "input",
+                "address": 80,
+                "type": "value",
+                "units": "V",
+                "min": 80,
+                "max": 305,
+                "scale": 0.1,
+                "round_to": 1,
+                "group": "power_status"
+            },
+            {
+                "name": "voltage_dc",
+                "reg_type": "input",
+                "address": 96,
+                "type": "value",
+                "units": "V",
+                "min": 0,
+                "max": 60,
+                "scale": 0.01,
+                "round_to": 0.1,
+                "group": "power_status"
+            },
+            {
+                "name": "current_dc",
+                "reg_type": "input",
+                "address": 97,
+                "type": "value",
+                "units": "A",
+                "min": 0,
+                "max": 20,
+                "scale": 0.01,
+                "round_to": 0.01,
+                "group": "power_status"
+            },
+            {
+                "name": "battery_voltage",
+                "reg_type": "input",
+                "address": 211,
+                "type": "value",
+                "units": "V",
+                "min": 0,
+                "max": 60,
+                "scale": 0.01,
+                "round_to": 0.1,
+                "group": "power_status"
+            },
+            {
+                "name": "battery_current",
+                "reg_type": "input",
+                "address": 212,
+                "type": "value",
+                "units": "A",
+                "min": -40,
+                "max": 20,
+                "scale": 0.01,
+                "round_to": 0.01,
+                "group": "power_status"
+            },
+            {
+                "name": "battery_detect",
+                "reg_type": "holding",
+                "address": "184:11:1",
+                "type": "value",
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "Detected",
+                    "Not Detected"
+                ],
+                "readonly": true,
+                "group": "power_status"
+            },
+            {
+                "name": "battery_status",
+                "reg_type": "holding",
+                "address": "184:0:1",
+                "type": "value",
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "Not Charged",
+                    "Charged"
+                ],
+                "readonly": true,
+                "group": "power_status"
+            },
+            {
+                "name": "battery_mode",
+                "reg_type": "holding",
+                "address": "184:7:1",
+                "type": "value",
+                "enum": [
+                    0,
+                    1
+                ],
+                "enum_titles": [
+                    "Charging",
+                    "Discharging"
+                ],
+                "readonly": true,
+                "group": "power_status"
+            },
+            {
+                "name": "battery_charge_mode",
+                "reg_type": "holding",
+                "address": "184:1:3",
+                "type": "value",
+                "enum": [
+                    0,
+                    1,
+                    2,
+                    4
+
+                ],
+                "enum_titles": [
+                    "Undefined",
+                    "Сonstant Сurrent",
+                    "Сonstant Voltage",
+                    "Float Mode"
+                ],
+                "readonly": true,
+                "group": "power_status"
+            }
         ],
         "translations": {
             "en": {
-                "template_title": "MEANWELL DRS Series - Multi-function Power Supply"
+                "template_title": "MEANWELL DRS Series - Multi-function Power Supply",
+
+                "voltage_ac": "Voltage AC",
+                "voltage_dc": "Voltage DC",
+                "current_dc": "Сurrent DC",
+                "battery_voltage": "Battery Voltage",
+                "battery_current": "Battery Сurrent",
+                "battery_detected": "Battery Detect",
+                "battery_status": "Battery Status",
+                "battery_mode": "Battery Mode",
+                "battery_charge_mode": "Battery Charge Mode",
+
+
             },
             "ru": {
-                "template_title": "MEANWELL DRS Series - многофункциональный источник питания"
+                "template_title": "MEANWELL DRS Series - многофункциональный источник питания",
+                "Power Status": "Состояние питания",
+                "Unit Status": "Состояние устройства",
+                "Settings": "Настройка",
+                "HW Info": "Данные устройства",
+
+                "voltage_ac": "Напряжение AC",
+                "voltage_dc": "Напряжение DC",
+                "current_dc": "Ток DC",
+                "battery_voltage": "Напряжение батареи",
+                "battery_current": "Ток батареи",
+                "battery_detect": "Наличие батареи",
+                "Detected": "Подключена",
+                "Not Detected": "Отсутствует",
+                "battery_status": "Статус батареи",
+                "Not Charged": "Не заряжена",
+                "Charged": "Заряжена",
+                "battery_mode": "Режим батареи",
+                "Charging": "Подзаряд",
+                "Discharging": "Разряд",
+                "battery_charge_mode": "Режим зарядки батареи",
+                "Undefined": "Не определен",
+                "Сonstant Сurrent": "Постоянный ток",
+                "Сonstant Voltage": "Постоянное напряжение",
+                "Float Mode": "Поддержание уровня",
             }
         }
     }
